--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
-    implementation project(":android-binding-classes")
+    implementation 'com.github.LucaWeinmann:AndroidBindingClasses:1.0.0'
 }
