--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AndroidBindingClasses"
 include ':app'
-include ':android-binding-classes'
+include ':android-viewbinding-classes'
